cmake_minimum_required(VERSION 2.9)
project (clibs C)

if (MSVC)
  add_compile_options(/WX)
  if(CMAKE_C_FLAGS MATCHES "/W[0-4]")
    string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
  else()
    add_compile_options(/W4)
  endif()
endif (MSVC)

include (CheckFunctionExists)
include (CheckLibraryExists)
check_function_exists(strdup STRDUP_FOUND)
check_function_exists(strlcpy STRLCPY_FOUND)
check_function_exists(strlcat STRLCAT_FOUND)
if (STRDUP_FOUND)
  add_compile_definitions(HAVE_STRDUP)
else (STRDUP_FOUND)
  check_library_exists(bsd strdup "" LIBBSD_FOUND)
endif (STRDUP_FOUND)
if (STRLCPY_FOUND)
  add_compile_definitions(HAVE_STRLCPY)
else (STRLCPY_FOUND)
  check_library_exists(bsd strlcpy "" LIBBSD_FOUND)
endif(STRLCPY_FOUND)
if (STRLCAT_FOUND)
  add_compile_definitions(HAVE_STRLCAT)
else (HAVE_STRLCAT_FOUND)
  check_library_exists(bsd strlcat "" LIBBSD_FOUND)
endif(STRLCAT_FOUND)

if (LIBBSD_FOUND)
  add_compile_definitions(HAVE_LIBBSD)
  add_compile_definitions(HAVE_STRDUP)
  add_compile_definitions(HAVE_STRLCPY)
  add_compile_definitions(HAVE_STRLCAT)
endif (LIBBSD_FOUND)

file (GLOB LIB_HDR *.h)
add_library (${PROJECT_NAME} strings.c l10n.c strutil.c critbit.c selist.c format.c ${LIB_HDR})
add_library (cutest CuTest.c)
add_executable (test_clibs tests.c test_strings.c test_l10n.c test_selist.c test_strutil.c test_format.c test_critbit.c)
target_link_libraries (test_clibs cutest ${PROJECT_NAME})
if (LIBBSD_FOUND)
	target_link_libraries (test_clibs bsd)
endif (LIBBSD_FOUND)
enable_testing()
add_test (NAME clibs COMMAND test_clibs)
set (CLIBS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "clibs headers")
set (CLIBS_LIBRARIES ${PROJECT_NAME} CACHE INTERNAL "single-file libraries")
