cmake_minimum_required(VERSION 3.13)
project (clibs C)

if (MSVC)
  add_compile_options(/WX)
  if(CMAKE_C_FLAGS MATCHES "/W[0-4]")
    string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
  else()
    add_compile_options(/W4)
  endif()
endif (MSVC)

include (CheckFunctionExists)
include (CheckLibraryExists)
check_function_exists(_itoa _ITOA_FOUND)
if (NOT _ITOA_FOUND)
check_function_exists(itoa ITOA_FOUND)
endif(NOT _ITOA_FOUND)
if (_ITOA_FOUND)
  add_compile_definitions(HAVE__ITOA=1)
elseif (ITOA_FOUND)
  add_compile_definitions(HAVE_ITOA=1)
endif(_ITOA_FOUND)

check_function_exists(_strdup _STRDUP_FOUND)
if (NOT _STRDUP_FOUND)
check_function_exists(strdup STRDUP_FOUND)
endif(NOT _STRDUP_FOUND)
check_function_exists(strlcpy STRLCPY_FOUND)
check_function_exists(strlcat STRLCAT_FOUND)
if (_STRDUP_FOUND)
  add_compile_definitions(HAVE__STRDUP=1)
elseif (STRDUP_FOUND)
  add_compile_definitions(HAVE_STRDUP=1)
else (_STRDUP_FOUND)
  check_library_exists(bsd strdup "" LIBBSD_FOUND)
endif (_STRDUP_FOUND)
if (STRLCPY_FOUND)
  add_compile_definitions(HAVE_STRLCPY=1)
else (STRLCPY_FOUND)
  check_library_exists(bsd strlcpy "" LIBBSD_FOUND)
endif(STRLCPY_FOUND)
if (STRLCAT_FOUND)
  add_compile_definitions(HAVE_STRLCAT=1)
else (HAVE_STRLCAT_FOUND)
  check_library_exists(bsd strlcat "" LIBBSD_FOUND)
endif(STRLCAT_FOUND)

if (LIBBSD_FOUND)
  add_compile_definitions(HAVE_LIBBSD=1)
  add_compile_definitions(HAVE_STRDUP=1)
  add_compile_definitions(HAVE_STRLCPY=1)
  add_compile_definitions(HAVE_STRLCAT=1)
endif (LIBBSD_FOUND)

file (GLOB LIB_HDR *.h)
add_library (${PROJECT_NAME} strings.c l10n.c strutil.c critbit.c selist.c format.c ${LIB_HDR})
add_library (cutest CuTest.c)
add_executable (test_clibs tests.c test_cmdline.c test_strings.c test_l10n.c test_selist.c test_strutil.c test_format.c test_critbit.c)
target_link_libraries (test_clibs cutest ${PROJECT_NAME})
if (LIBBSD_FOUND)
	target_link_libraries (test_clibs bsd)
endif (LIBBSD_FOUND)
enable_testing()
add_test (NAME clibs COMMAND test_clibs)
set (CLIBS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "clibs headers")
set (CLIBS_LIBRARIES ${PROJECT_NAME} CACHE INTERNAL "single-file libraries")
